base/02-extern/01-homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deploy
  namespace: homeassistant
  labels:
    environment: extern
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      volumes:
        - name: vol
          nfs:
            server: 192.168.213.2
            path: /mnt/data/shome
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:0.117.0
          volumeMounts:
            - name: vol
              mountPath: /config
          ports:
            - containerPort: 8123
              name: websecure
