base/02-extern/01-homeassistant/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-https
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shome.domain.tld`)
      kind: Rule
      services:
        - name: homeassistant-service
          port: 8123
      middlewares:
        - name: headers
          namespace: traefik
  tls:
    certResolver: default
    options:
      name: tls
      namespace: traefik
